--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@sanity/image-url": "^2.0.2",
+    "@sanity/vision": "^4.21.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "next-sanity": "^11.6.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
+    "sanity": "^4.21.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
