--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@sanity/image-url": "^2.0.2",
     "@sanity/vision": "^4.21.1",
     "clsx": "^2.1.1",
